--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack -d --watch",
-    "start": "node server/index.js",
-    "start:dev": "nodemon server/index.js -w server -w database-mysql",
+    "start": "node server-sdc-pg/index.js",
+    "start:dev": "nodemon server-sdc-pg/index.js -w server -w database-mysql",
     "seed": "node database/seed.js"
   },
   "author": "object Object",
@@ -19,21 +19,42 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "JSONStream": "^1.3.5",
+    "artillery": "^1.6.0-29",
     "axios": "^0.18.1",
     "babel-loader": "^8.0.6",
-    "bluebird": "^3.5.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.17.2",
+    "convert-csv-to-json": "0.0.15",
     "css-loader": "^3.3.0",
+    "csv-stream": "^0.2.0",
+    "csv-writer": "^1.5.0",
+    "csvjson": "^5.1.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "fast-csv": "^3.7.0",
     "jquery": "^3.2.1",
+    "mongodb": "^3.4.1",
     "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
     "mysql": "^2.14.1",
+    "newrelic": "^6.2.0",
     "path": "^0.12.7",
+    "pg": "^7.15.0",
+    "pg-copy-streams": "^2.2.2",
+    "pg-hstore": "^2.3.3",
+    "pg-promise": "^10.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.8.5",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
+    "split": "^1.0.1",
+    "stream": "0.0.2",
+    "stream-to-mongo-db": "^1.6.0",
     "style-loader": "^1.0.1",
     "styled-components": "^4.4.1",
+    "through2": "^3.0.1",
     "underscore": "^1.8.3",
     "webpack": "^4.29.6"
   }
