creates repo for austin's service

--- a/db-pg/seed/config.json
+++ b/db-pg/seed/config.json
@@ -1,6 +1,7 @@
 {
-    "host": "localhost",
-    "user": "austinliu",
+    "host": "ec2-54-183-209-135.us-west-1.compute.amazonaws.com",
+    "user": "postgres",
+    "password": "1234",
     "db": "sdc_pg",
     "port": "5432"
 }
