--- a/getLoading.yml
+++ b/getLoading.yml
@@ -1,5 +1,8 @@
 config:
     target: 'http://localhost:3001'
+    http:
+      pool: 10 # All HTTP requests from all virtual users will be sent over the same 10 connections
+      # timeout: 20 # Responses have to be sent within this number of seconds or the request will be aborted  
     phases:
       - duration: 15
         arrivalRate: 1000
