--- a/postLoading.yml
+++ b/postLoading.yml
@@ -1,14 +1,17 @@
 config:
     target: "http://localhost:3001"
+    http:
+      pool: 10 # All HTTP requests from all virtual users will be sent over the same 10 connections
+      # timeout: 20 # Responses have to be sent within this number of seconds or the request will be aborted  
     phases:
-      - duration: 20
-        arrivalRate: 100
+      - duration: 15
+        arrivalRate: 1000
 scenarios:
 - flow:
     - post:
         url: "/products"
         json:
-            id: 10000005
+            id: 10000001
             itemname: "Stainless Steel Table"
             itemimage: "image_url"
             typesize: "7 X 11 X 12"
@@ -17,4 +20,4 @@ scenarios:
             rating: 3.6
             numberratings: 197
     # Print the data we're sending while debugging the script:
-    - log: "Sent a request to /products"
+    # - log: "Sent a request to /products"
